filter section added in case-study index

--- a/case-study/wireless-gadgetz-seo.html
+++ b/case-study/wireless-gadgetz-seo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technetmark</title>
+    <title>Wireless Gadgetz</title>
     <link rel="canonical" href="https://www.voicene.com/" />
     <link rel="icon" type="image/x-icon" href="img/fav.png" />
     <link href="custom.css" rel="stylesheet" />
@@ -26,6 +26,8 @@
 </head>
 
 <body>
+
+
     <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
@@ -859,7 +861,7 @@
                         <div class="w-full mb-12 xl:mb-0 xl:pr-16 ">
                             <h1
                                 class=" mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-7xl animate-fade-up  sm:leading-none text-center">
-                                Technetmark</h1>
+                                Wireless Gadgetz</h1>
                             <!-- <h1 style="font-size: 1em"
                                 class="max-w-lg mb-6 font-sans text-3xl italic tracking-tight text-white sm:text-4xl sm:leading-none">
                                 Unlock the Future of Mobile App Development with Flutter
@@ -915,7 +917,7 @@
                 </li>
                 <li>
                     <a href="#" class="block transition hover:text-gray-700">
-                        Technetmark
+                        Wireless Gadgetz
                     </a>
                 </li>
             </ol>
@@ -928,96 +930,100 @@
             <!-- Header -->
             <div class="text-left mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
-                    Technetmark LinkedIn Growth Strategy
+                    Wireless Gadgetz SEO Success
                 </h2>
-                <p class="text-base text-gray-600 mt-4 max-w-2xl">
-                    A case study by Voicene showcasing explosive LinkedIn growth for Technetmark.
-                </p>
             </div>
 
             <!-- Stats Section -->
-            <!-- <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
-            <div class="border-r-0 md:border-r border-gray-200">
-                <p class="text-4xl font-bold text-gray-800">2</p>
-                <p class="text-sm text-gray-600 uppercase mt-2">Followers (June 2024)</p>
+             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
+               
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">506</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Traffic Clicks</p>
+                </div>
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">9.15K</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Total Impressions</p>
+                </div>
+                <div>
+                    <p class="text-4xl font-bold text-gray-800">5.5%</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">CTR Achieved</p>
+                </div>
             </div>
-            <div class="border-r-0 md:border-r border-gray-200">
-                <p class="text-4xl font-bold text-gray-800">1,024</p>
-                <p class="text-sm text-gray-600 uppercase mt-2">Followers (Jan 2025)</p>
-            </div>
-            <div>
-                <p class="text-4xl font-bold text-gray-800">8,400%</p>
-                <p class="text-sm text-gray-600 uppercase mt-2">Growth Achieved</p>
-            </div>
-        </div> -->
 
             <!-- Main Content -->
             <div class="space-y-8">
-                <!-- Objective -->
+                <!-- Traffic Clicks -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Objective
+                        Traffic Clicks
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            To increase Technetmark's LinkedIn followers, enhance brand visibility, and drive meaningful
-                            engagement within the tech and cloud services sectors.
+                            506 clicks, indicating strong user engagement with targeted search traffic.
                         </p>
                     </div>
                 </div>
 
-                <!-- Challenge -->
+                <!-- Total Impressions -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Challenge
+                        Total Impressions
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            Technetmark had only 2 followers in June 2024, requiring a comprehensive social media growth strategy.
-
+                            9.15K, demonstrating increased visibility and brand awareness.
                         </p>
                     </div>
                 </div>
 
-                <!-- Strategy Implemented -->
+                <!-- Average Click-Through Rate (CTR) -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Strategy Implemented
+                        Average Click-Through Rate (CTR)
                     </h3>
                     <div class="md:w-3/4">
-                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
-                            <li><strong>Content Creation : </strong>Developed engaging posts around Technetmark's services and achievements.</li>
-                            <li><strong>Audience Targeting : </strong>Focused on professionals in tech and cloud services sectors.</li>
-                            <li><strong>Consistency : </strong>Maintained a consistent posting schedule with visually appealing content.</li>
-                            <li><strong>Performance Monitoring : </strong>Analyzed metrics monthly to refine the strategy.</li>
-                        </ul>
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            5.5%, a positive metric showcasing effective optimization of meta titles and descriptions.
+                        </p>
                     </div>
                 </div>
 
-                <!-- Results Achieved -->
+                <!-- Average Position -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Results Achieved
+                        Average Position
                     </h3>
                     <div class="md:w-3/4">
-                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
-                            <li><strong>June 2024 : </strong>Started with 2 followers.</li>
-                            <li><strong>September 2024 : </strong>Peaked at 196 followers, showcasing rapid growth.</li>
-                            <li><strong>January 2025 : </strong>JReached 1,024 followers despite holiday season dips.</li>
-                        </ul>
-                        
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            18, reflecting consistent improvement in search rankings for competitive keywords. </p>
+                    </div>
+                </div>
+
+                <!-- Meta Ads -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Meta Ads
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            Generated 56 orders in 7 days with a $35 budget, reaching over 9,000 people.
+                        </p>
                     </div>
                 </div>
             </div>
 
             <!-- Conclusion -->
             <p class="italic text-gray-500 text-[14px] mt-12 text-center">
-                Voicene's strategic approach achieved an 8,400% growth in followers over six months. This highlights the power of tailored social media marketing in building brand presence.
-
+                Our SEO strategy included content optimization, targeted keyword implementation, and backlink building,
+                which led to steady growth in impressions and clicks, as evidenced by the GA4 graph. Voicene’s efforts
+                have positioned Wireless Gadgetz as a reliable brand for assistive technology in Texas, driving both
+                traffic and conversions through organic search.
             </p>
         </div>
 
@@ -1424,6 +1430,7 @@
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-5e3ab10a-bc43-435c-ad95-d81b88f1561e" data-elfsight-app-lazy></div>
     <!-- ========== END FOOTER ========== -->
+
 
 </body>
 
