--- a/case-study/arppan-seo.html
+++ b/case-study/arppan-seo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireless Gadgetz</title>
+    <title>Arappen</title>
     <link rel="canonical" href="https://www.voicene.com/" />
     <link rel="icon" type="image/x-icon" href="img/fav.png" />
     <link href="custom.css" rel="stylesheet" />
@@ -26,8 +26,6 @@
 </head>
 
 <body>
-
-
     <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
@@ -854,14 +852,14 @@
 
     <section>
         <div class="relative">
-            <img src="./img/wireless-banner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
+            <img src="./img/arppanbanner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
             <div class="relative bg-gray-900 bg-opacity-75">
                 <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
                     <div class="flex flex-col items-center justify-between xl:flex-row">
                         <div class="w-full mb-12 xl:mb-0 xl:pr-16 ">
                             <h1
                                 class=" mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-7xl animate-fade-up  sm:leading-none text-center">
-                                Wireless Gadgetz</h1>
+                                Arppan</h1>
                             <!-- <h1 style="font-size: 1em"
                                 class="max-w-lg mb-6 font-sans text-3xl italic tracking-tight text-white sm:text-4xl sm:leading-none">
                                 Unlock the Future of Mobile App Development with Flutter
@@ -917,113 +915,102 @@
                 </li>
                 <li>
                     <a href="#" class="block transition hover:text-gray-700">
-                        Wireless Gadgetz
+                        Arppan
                     </a>
                 </li>
             </ol>
         </nav>
     </section>
 
-
-
     <section class="relative bg-white py-16">
         <div class="max-w-7xl mx-auto px-6 md:px-12">
             <!-- Header -->
             <div class="text-left mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
-                    Wireless Gadgetz SEO Success
+                    Key Achievements
                 </h2>
             </div>
 
             <!-- Stats Section -->
-            <!--    
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
                 <div class="border-r-0 md:border-r border-gray-200">
-                    <p class="text-4xl font-bold text-gray-800">506</p>
-                    <p class="text-sm text-gray-600 uppercase mt-2">Traffic Clicks</p>
+                    <p class="text-4xl font-bold text-gray-800">328</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Total Clicks</p>
                 </div>
                 <div class="border-r-0 md:border-r border-gray-200">
-                    <p class="text-4xl font-bold text-gray-800">9.15K</p>
+                    <p class="text-4xl font-bold text-gray-800">8.07K</p>
                     <p class="text-sm text-gray-600 uppercase mt-2">Total Impressions</p>
                 </div>
                 <div>
-                    <p class="text-4xl font-bold text-gray-800">5.5%</p>
+                    <p class="text-4xl font-bold text-gray-800">4.1%</p>
                     <p class="text-sm text-gray-600 uppercase mt-2">CTR Achieved</p>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Main Content -->
             <div class="space-y-8">
-                <!-- Traffic Clicks -->
+                <!-- Traffic Growth -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Traffic Clicks
+                        Traffic Growth
+                    </h3>
+                    <div class="md:w-3/4">
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li>Achieved a significant increase in organic traffic from April to August 2024.</li>
+                            <li>Total clicks reached 328 with 8.07K total impressions, showing strong growth momentum.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Improved Click-Through Rate (CTR) -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Improved Click-Through Rate (CTR)
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            506 clicks, indicating strong user engagement with targeted search traffic.
+                            Maintained a healthy 4.1% CTR, reflecting the effectiveness of targeted keywords and
+                            optimized content.
                         </p>
                     </div>
                 </div>
 
-                <!-- Total Impressions -->
+                <!-- Better Search Rankings -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Total Impressions
+                        Better Search Rankings
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            9.15K, demonstrating increased visibility and brand awareness.
+                            The average search position improved to 10.5, indicating a higher visibility for Arppan's
+                            primary search terms.
                         </p>
                     </div>
                 </div>
 
-                <!-- Average Click-Through Rate (CTR) -->
+                <!-- Content Optimization -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Average Click-Through Rate (CTR)
+                        Content Optimization
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            5.5%, a positive metric showcasing effective optimization of meta titles and descriptions.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Average Position -->
-                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
-                    <h3
-                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Average Position
-                    </h3>
-                    <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            18, reflecting consistent improvement in search rankings for competitive keywords. </p>
-                    </div>
-                </div>
-
-                <!-- Meta Ads -->
-                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
-                    <h3
-                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Meta Ads
-                    </h3>
-                    <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            Generated 56 orders in 7 days with a $35 budget, reaching over 9,000 people.
+                            Updated meta tags, implemented keyword-focused blogs, and conducted backlink-building,
+                            boosting the domain authority from 2 to 9 (Semrush Score).
                         </p>
                     </div>
                 </div>
             </div>
 
-            <!-- Conclusion -->
+            <!-- Summary -->
             <p class="italic text-gray-500 text-[14px] mt-12 text-center">
-                Our SEO strategy included content optimization, targeted keyword implementation, and backlink building,
-                which led to steady growth in impressions and clicks, as evidenced by the GA4 graph. Voicene’s efforts
-                have positioned Wireless Gadgetz as a reliable brand for assistive technology in Texas, driving both
-                traffic and conversions through organic search.
+                Voicene’s tailored SEO efforts have substantially increased Arppan's search engine performance, driving
+                higher engagement and visibility across Kerala and beyond.
             </p>
         </div>
 
@@ -1064,8 +1051,6 @@
             }
         }
     </style>
-
-
     <!-- ========== FOOTER ========== -->
     <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
         <!-- Grid -->
@@ -1430,6 +1415,8 @@
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-5e3ab10a-bc43-435c-ad95-d81b88f1561e" data-elfsight-app-lazy></div>
     <!-- ========== END FOOTER ========== -->
+
+
 
 
 </body>
