--- a/case-study/aviratha-digital-marketing.html
+++ b/case-study/aviratha-digital-marketing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arappen</title>
+    <title>Aviratha</title>
     <link rel="canonical" href="https://www.voicene.com/" />
     <link rel="icon" type="image/x-icon" href="img/fav.png" />
     <link href="custom.css" rel="stylesheet" />
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
@@ -852,14 +853,14 @@
 
     <section>
         <div class="relative">
-            <img src="./img/arppanbanner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
+            <img src="./img/aviratha-banner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
             <div class="relative bg-gray-900 bg-opacity-75">
                 <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
                     <div class="flex flex-col items-center justify-between xl:flex-row">
                         <div class="w-full mb-12 xl:mb-0 xl:pr-16 ">
                             <h1
                                 class=" mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-7xl animate-fade-up  sm:leading-none text-center">
-                                Arppan</h1>
+                                Aviratha</h1>
                             <!-- <h1 style="font-size: 1em"
                                 class="max-w-lg mb-6 font-sans text-3xl italic tracking-tight text-white sm:text-4xl sm:leading-none">
                                 Unlock the Future of Mobile App Development with Flutter
@@ -915,102 +916,115 @@
                 </li>
                 <li>
                     <a href="#" class="block transition hover:text-gray-700">
-                        Arppan
+                        Aviratha
                     </a>
                 </li>
             </ol>
         </nav>
     </section>
 
+
     <section class="relative bg-white py-16">
         <div class="max-w-7xl mx-auto px-6 md:px-12">
             <!-- Header -->
             <div class="text-left mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
-                    Key Achievements
+                    Aviratha Builders Digital Success
                 </h2>
+                <p class="text-base text-gray-600 mt-4 max-w-2xl">
+                    A case study by Voicene showcasing enhanced online presence and lead generation for Aviratha
+                    Builders.
+                </p>
             </div>
 
             <!-- Stats Section -->
-            <!-- <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
                 <div class="border-r-0 md:border-r border-gray-200">
-                    <p class="text-4xl font-bold text-gray-800">328</p>
-                    <p class="text-sm text-gray-600 uppercase mt-2">Total Clicks</p>
+                    <p class="text-4xl font-bold text-gray-800">8,848</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Impressions</p>
                 </div>
                 <div class="border-r-0 md:border-r border-gray-200">
-                    <p class="text-4xl font-bold text-gray-800">8.07K</p>
-                    <p class="text-sm text-gray-600 uppercase mt-2">Total Impressions</p>
+                    <p class="text-4xl font-bold text-gray-800">62</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Leads Generated</p>
                 </div>
                 <div>
-                    <p class="text-4xl font-bold text-gray-800">4.1%</p>
+                    <p class="text-4xl font-bold text-gray-800">2.4%</p>
                     <p class="text-sm text-gray-600 uppercase mt-2">CTR Achieved</p>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Main Content -->
             <div class="space-y-8">
-                <!-- Traffic Growth -->
+                <!-- Objective -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Traffic Growth
+                        Objective
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            Enhance Aviratha Builders’ online presence, improve search rankings, boost social media
+                            engagement, and generate leads through a mix of organic and paid marketing strategies.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Challenge -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Challenge
                     </h3>
                     <div class="md:w-3/4">
                         <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
-                            <li>Achieved a significant increase in organic traffic from April to August 2024.</li>
-                            <li>Total clicks reached 328 with 8.07K total impressions, showing strong growth momentum.
-                            </li>
+                            <li>Low search visibility and engagement.</li>
+                            <li>Need for consistent content to establish authority.</li>
+                            <li>Generating leads within a limited ad budget.</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Improved Click-Through Rate (CTR) -->
+                <!-- Strategy Implemented -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Improved Click-Through Rate (CTR)
+                        Strategy
                     </h3>
                     <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            Maintained a healthy 4.1% CTR, reflecting the effectiveness of targeted keywords and
-                            optimized content.
-                        </p>
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li><strong>SEO & Content Marketing : </strong>Published 41 blogs, optimized for 426
+                                keywords, improving search visibility (8,848 impressions, 36 clicks).</li>
+                            <li><strong>Social Media Marketing : </strong>Created 60 social media posts, increasing
+                                engagement and brand awareness.</li>
+                            <li><strong>Paid Advertising : </strong>Meta Ads campaign (₹1,600 for 7 days) generated 62
+                                responses at a cost-effective rate.</li>
+                        </ul>
                     </div>
                 </div>
 
-                <!-- Better Search Rankings -->
+                <!-- Achievements -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Better Search Rankings
+                        Achievements
                     </h3>
                     <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            The average search position improved to 10.5, indicating a higher visibility for Arppan's
-                            primary search terms.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Content Optimization -->
-                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
-                    <h3
-                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Content Optimization
-                    </h3>
-                    <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            Updated meta tags, implemented keyword-focused blogs, and conducted backlink-building,
-                            boosting the domain authority from 2 to 9 (Semrush Score).
-                        </p>
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li><strong>Improved SEO Performance : </strong>CTR at 2.4%, average position 16.6.</li>
+                            <li><strong>Enhanced Social Engagement : </strong>Regular, high-quality content increased
+                                organic reach.</li>
+                            <li><strong>Successful Lead Generation : </strong>Cost-effective ad campaign drove strong
+                                inquiries.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
-            <!-- Summary -->
+            <!-- Conclusion -->
             <p class="italic text-gray-500 text-[14px] mt-12 text-center">
-                Voicene’s tailored SEO efforts have substantially increased Arppan's search engine performance, driving
-                higher engagement and visibility across Kerala and beyond.
+                Through a mix of organic and paid strategies, Voicene successfully amplified Aviratha Builders’ digital
+                presence. The results demonstrated steady growth in search visibility, social engagement, and lead
+                generation, solidifying Aviratha’s position in the competitive real estate market.
             </p>
         </div>
 
@@ -1051,6 +1065,7 @@
             }
         }
     </style>
+
     <!-- ========== FOOTER ========== -->
     <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
         <!-- Grid -->
@@ -1415,8 +1430,6 @@
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-5e3ab10a-bc43-435c-ad95-d81b88f1561e" data-elfsight-app-lazy></div>
     <!-- ========== END FOOTER ========== -->
-
-
 
 
 </body>
