--- a/data-services/data-annotation.html
+++ b/data-services/data-annotation.html
@@ -27,33 +27,33 @@
     <script src="../preline.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-  <script src="https://static.elfsight.com/platform/platform.js" async></script>
-  <div class="elfsight-app-4753be9f-9b30-449f-a673-0305a7fb609a" data-elfsight-app-lazy></div>
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-4753be9f-9b30-449f-a673-0305a7fb609a" data-elfsight-app-lazy></div>
 
-  <!-- 1. Configure Chatling -->
-  <script>
-    window.chtlConfig = { chatbotId: "4343423943" };
-  </script>
+    <!-- 1. Configure Chatling -->
+    <script>
+        window.chtlConfig = { chatbotId: "4343423943" };
+    </script>
 
-  <!-- 2. Load Chatling Widget -->
-  <script async data-id="4343423943" id="chtl-script" type="text/javascript"
-    src="https://chatling.ai/js/embed.js"></script>
+    <!-- 2. Load Chatling Widget -->
+    <script async data-id="4343423943" id="chtl-script" type="text/javascript"
+        src="https://chatling.ai/js/embed.js"></script>
 
-  <!-- 3. Attempt to Auto-Open After  Seconds -->
-  <script>
-    setTimeout(function () {
-      if (window.Chatling && typeof window.Chatling.open === "function") {
-        window.Chatling.open();
-      } else {
-        var widgetButton = document.querySelector('[class*="chatling"] [role="button"]');
-        if (widgetButton) widgetButton.click();
-      }
-    }, 8000);
-  </script>
+    <!-- 3. Attempt to Auto-Open After  Seconds -->
+    <script>
+        setTimeout(function () {
+            if (window.Chatling && typeof window.Chatling.open === "function") {
+                window.Chatling.open();
+            } else {
+                var widgetButton = document.querySelector('[class*="chatling"] [role="button"]');
+                if (widgetButton) widgetButton.click();
+            }
+        }, 8000);
+    </script>
 </head>
 
 <body>
-      <!-- ========== HEADER ========== -->
+    <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
             aria-label="Global">
@@ -812,10 +812,10 @@
                                 Blogs
                             </a>
 
-                            <!-- <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-white hover:text-gray-300 font-medium focus:outline-none focus:text-gray-300"
-                        href="casestudies.html">
-                        Case Studies
-                    </a> -->
+                            <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-white hover:text-gray-300 font-medium focus:outline-none focus:text-gray-300"
+                                href="../case-study/">
+                                Case Studies
+                            </a>
 
                             <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-white hover:text-gray-300 font-medium focus:outline-none focus:text-gray-300"
                                 href="../company-profile.html">
@@ -1135,7 +1135,7 @@
         </div>
     </section>
 
-        <!-- ========== FOOTER ========== -->
+    <!-- ========== FOOTER ========== -->
     <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
         <!-- Grid -->
         <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 mb-10 px-4 sm:px-6 lg:px-8">
@@ -1201,7 +1201,8 @@
                             href="../enterprise-resource-planning.html">ERP</a>
                     </p>
                     <p>
-                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="../data-services.html">Data
+                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800"
+                            href="../data-services.html">Data
                             Services</a>
                     </p>
                 </div>
