case study updated

--- a/case-study/wireless-gadgetz-seo.html
+++ b/case-study/wireless-gadgetz-seo.html
@@ -51,7 +51,7 @@
 <body>
 
 
-   <!-- ========== HEADER ========== -->
+    <!-- ========== HEADER ========== -->
     <header class="sticky inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav class="relative max-w-7xl w-full bg-white rounded-[28px] py-3 text-md md:flex md:items-center md:justify-between md:py-0 mx-2 lg:mx-auto"
             aria-label="Global">
@@ -975,66 +975,76 @@
 
             <!-- Main Content -->
             <div class="space-y-8">
-                <!-- Traffic Clicks -->
+                <!-- Objective -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Traffic Clicks
+                        Objective
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            506 clicks, indicating strong user engagement with targeted search traffic.
+                            To increase Wireless Gadgetz's online visibility, drive organic traffic, and improve
+                            authority through a structured SEO and content marketing strategy, with the end goal of
+                            increasing relevant leads and conversions via the STAP voucher program.
+
                         </p>
                     </div>
                 </div>
 
-                <!-- Total Impressions -->
+                <!-- Challenge -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Total Impressions
+                        Challenge
                     </h3>
                     <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            9.15K, demonstrating increased visibility and brand awareness.
-                        </p>
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li>Very low Domain Authority (Score of 2 in April 2024).</li>
+                            <li>Minimal online visibility and backlinks.</li>
+                            <li>Poor presence in organic search results with only 57 keywords under #100.</li>
+                            <li>Limited brand awareness within the local and accessible community in Texas.</li>
+                        </ul>
                     </div>
                 </div>
 
-                <!-- Average Click-Through Rate (CTR) -->
+                <!-- Strategy Implemented -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Average Click-Through Rate (CTR)
+                        Strategy Implemented
                     </h3>
                     <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            5.5%, a positive metric showcasing effective optimization of meta titles and descriptions.
-                        </p>
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li><strong>Technical SEO Audit </strong>to fix on-site issues and optimize for speed and
+                                mobile usability.</li>
+                            <li><strong>On-page SEO </strong>with keyword-mapped content across key service and product
+                                pages.</li>
+                            <li><strong>Content Marketing </strong>Publishing regular blog posts targeting STAP-related
+                                queries and accessibility solutions. </li>
+                            <li><strong>Backlink Building </strong>through directory submissions, guest posts, and
+                                outreach campaigns.</li>
+                            <li><strong>Local SEO </strong>improvements with Google Business Profile optimization and
+                                location-specific content.</li>
+                            <li><strong>Performance Monitoring </strong>using tools like SEMrush, GSC, and GA4.</li>
+                        </ul>
                     </div>
                 </div>
 
-                <!-- Average Position -->
+                <!-- Results Achieved -->
                 <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
                     <h3
                         class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Average Position
+                        Achievements
                     </h3>
                     <div class="md:w-3/4">
                         <p class="text-gray-600 text-[15px] leading-relaxed">
-                            18, reflecting consistent improvement in search rankings for competitive keywords. </p>
-                    </div>
-                </div>
+                            Within a span of 11 months, Wireless Gadgetz saw remarkable growth through Voicene’s SEO
+                            efforts. The authority score improved from 2 to 9, and total impressions rose from just 490
+                            to over 3,100. The number of keywords ranking in the top 100 increased significantly from 57
+                            to 420. Backlink growth was exponential, jumping from 63 to 12,350, while referring domains
+                            also grew steadily from 24 to 90. Additionally, active user engagement saw a healthy rise,
+                            reflecting the improved online visibility and relevance.
 
-                <!-- Meta Ads -->
-                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
-                    <h3
-                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
-                        Meta Ads
-                    </h3>
-                    <div class="md:w-3/4">
-                        <p class="text-gray-600 text-[15px] leading-relaxed">
-                            Generated 56 orders in 7 days with a $35 budget, reaching over 9,000 people.
                         </p>
                     </div>
                 </div>
@@ -1042,10 +1052,12 @@
 
             <!-- Conclusion -->
             <p class="italic text-gray-500 text-[14px] mt-12 text-center">
-                Our SEO strategy included content optimization, targeted keyword implementation, and backlink building,
-                which led to steady growth in impressions and clicks, as evidenced by the GA4 graph. Voicene’s efforts
-                have positioned Wireless Gadgetz as a reliable brand for assistive technology in Texas, driving both
-                traffic and conversions through organic search.
+                Voicene’s strategic SEO campaign significantly enhanced Wireless Gadgetz’s digital footprint. From a
+                low-authority site with minimal traffic, the brand evolved into a competitive player in the STAP
+                e-commerce niche. The exponential growth in backlinks, keyword rankings, and authority score reflects a
+                strong and sustainable SEO foundation laid out by Voicene.
+
+
             </p>
         </div>
 
@@ -1107,7 +1119,8 @@
                             href="../careers.html">Careers</a>
                     </p>
                     <p>
-                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800" href="../sitemap.html">Sitemap</a>
+                        <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800"
+                            href="../sitemap.html">Sitemap</a>
                     </p>
                 </div>
             </div>
