--- a/terms.html
+++ b/terms.html
@@ -863,7 +863,7 @@
     </nav>
   </header>
   <!-- ========== END HEADER ========== -->
-  <section class="bg-gray-100/50">
+  <section class="bg-gray-100/50 ">
 
     <div class=" text-black ">
       <div class="container mx-auto px-4 py-8">
@@ -882,7 +882,7 @@
         </p>
         <br />
         <!-- repeat this section for each section of terms -->
-        <div class='pb-5'>
+        <div class='pb-5 px-4'>
           <h1 style="font-size: 2em" class='font-bold text-orange-700 dark:text-orange-300'>General</h1>
 
           <br />
