--- a/case-study/index.html
+++ b/case-study/index.html
@@ -957,13 +957,13 @@
 
         <div class="max-w-7xl mx-auto px-6 md:px-12">
             <!-- Header with Filters -->
-            <div class="flex justify-between items-center mb-16">
+            <div class="lg:flex lg:justify-between lg:items-center mb-16 grid grid-cols-1 p-5 md:grid-cols-2">
                 <h2
                     class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 via-indigo-500 to-purple-600">
                     Our Success Stories
                 </h2>
 
-                <div class="flex gap-4">
+                <div class="flex gap-4 ">
                     <!-- Filter by Industries -->
                     <div class="relative">
                         <select id="filterIndustries"
