new two blogs added

--- a/blogs/ai-driven-future-of-it.html
+++ b/blogs/ai-driven-future-of-it.html
@@ -1206,6 +1206,35 @@
                                 </div>
                             </a>
                             <!-- End Media -->
+                             <!-- Media -->
+                            <a class="group flex items-center gap-x-6" href="./answer-engine-optimization.html">
+                                <div class="grow">
+                                    <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
+                                        What is Answer Engine Optimization (AEO), and why does it matter now more than
+                                        ever?
+                                </div>
+
+                                <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
+                                    <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
+                                        src="./BlogImg/answer-engine-optimization.jpg" alt="Image Description" />
+                                </div>
+                            </a>
+                            <!-- End Media -->
+
+
+                            <!-- Media -->
+                            <a class="group flex items-center gap-x-6" href="./from-mvp-to-ml.html">
+                                <div class="grow">
+                                    <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
+                                        From MVP to ML: How Startups Can Integrate AI Without the Hype
+                                </div>
+
+                                <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
+                                    <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
+                                        src="./BlogImg/from-mvp-to-ml.webp" alt="Image Description" />
+                                </div>
+                            </a>
+                            <!-- End Media -->
                         </div>
                     </div>
                 </div>
