--- a/blogs/from-mvp-to-ml.html
+++ b/blogs/from-mvp-to-ml.html
@@ -1154,7 +1154,6 @@ Call Center Services
                                 </div>
                             </a>
                             <!-- End Media -->
-
                             <!-- Media -->
                             <a class="group flex items-center gap-x-6" href="./answer-engine-optimization.html">
                                 <div class="grow">
@@ -1181,6 +1180,19 @@ Call Center Services
                                 <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
                                     <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
                                         src="./BlogImg/from-mvp-to-ml.webp" alt="Image Description" />
+                                </div>
+                            </a>
+                            <!-- End Media -->
+                            <!-- Media -->
+                            <a class="group flex items-center gap-x-6" href="./build-successful-online-store.html">
+                                <div class="grow">
+                                    <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
+                                        10 Steps to Build a Successful Online Store
+                                </div>
+
+                                <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
+                                    <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
+                                        src="./BlogImg/online-store.jpg" alt="Image Description" />
                                 </div>
                             </a>
                             <!-- End Media -->
