--- a/blogs.html
+++ b/blogs.html
@@ -1172,6 +1172,26 @@
         <!-- End Card -->
 
 
+        <!-- Card -->
+        <a class="group hover:bg-gray-100 rounded-xl p-5 transition-all" href="./blogs/build-successful-online-store.html">
+          <div class="aspect-w-16 aspect-h-10">
+            <img class="w-full object-cover rounded-xl" src="./blogs/BlogImg/online-store.jpg" alt="Image Description" />
+          </div>
+          <h3 class="mt-5 text-xl text-gray-800   ">
+            10 Steps to Build a Successful Online Store
+          </h3>
+          <p class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold text-gray-800">
+            Learn more
+            <svg class="flex-shrink-0 size-4 transition ease-in-out group-hover:translate-x-1"
+              xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="m9 18 6-6-6-6" />
+            </svg>
+          </p>
+        </a>
+        <!-- End Card -->
+
+
       </div>
       <!-- End Grid -->
     </div>
