--- a/blogs/it-insights-and-predictions.html
+++ b/blogs/it-insights-and-predictions.html
@@ -1080,6 +1080,7 @@
                             </h5>
                         </div>
                         <!-- End Avatar Media -->
+
                         <div class="space-y-6">
                             <!-- Media -->
                             <a class="group flex items-center gap-x-6"
@@ -1228,7 +1229,7 @@
                                 </div>
                             </a>
                             <!-- End Media -->
-                             <!-- Media -->
+                            <!-- Media -->
                             <a class="group flex items-center gap-x-6" href="./answer-engine-optimization.html">
                                 <div class="grow">
                                     <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
@@ -1254,6 +1255,19 @@
                                 <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
                                     <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
                                         src="./BlogImg/from-mvp-to-ml.webp" alt="Image Description" />
+                                </div>
+                            </a>
+                            <!-- End Media -->
+                            <!-- Media -->
+                            <a class="group flex items-center gap-x-6" href="./build-successful-online-store.html">
+                                <div class="grow">
+                                    <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
+                                        10 Steps to Build a Successful Online Store
+                                </div>
+
+                                <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
+                                    <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
+                                        src="./BlogImg/online-store.jpg" alt="Image Description" />
                                 </div>
                             </a>
                             <!-- End Media -->
