--- a/blogs/prompt-engineering-guide.html
+++ b/blogs/prompt-engineering-guide.html
@@ -1028,7 +1028,7 @@
                 </div>
                 <!-- End Content -->
 
-                <!-- Sidebar -->
+               <!-- Sidebar -->
                 <div
                     class="lg:col-span-1 lg:w-full lg:h-full lg:bg-gradient-to-r lg:from-gray-50 lg:via-transparent lg:to-transparent">
                     <div class="sticky top-0 start-0 py-8 lg:ps-8">
@@ -1188,7 +1188,7 @@
                                 </div>
                             </a>
                             <!-- End Media -->
-                             <!-- Media -->
+                            <!-- Media -->
                             <a class="group flex items-center gap-x-6" href="./answer-engine-optimization.html">
                                 <div class="grow">
                                     <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
@@ -1214,6 +1214,19 @@
                                 <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
                                     <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
                                         src="./BlogImg/from-mvp-to-ml.webp" alt="Image Description" />
+                                </div>
+                            </a>
+                            <!-- End Media -->
+                            <!-- Media -->
+                            <a class="group flex items-center gap-x-6" href="./build-successful-online-store.html">
+                                <div class="grow">
+                                    <span class="text-sm font-bold text-gray-800 group-hover:text-blue-600">
+                                        10 Steps to Build a Successful Online Store
+                                </div>
+
+                                <div class="flex-shrink-0 relative rounded-lg overflow-hidden size-20">
+                                    <img class="size-full absolute top-0 start-0 object-cover rounded-lg"
+                                        src="./BlogImg/online-store.jpg" alt="Image Description" />
                                 </div>
                             </a>
                             <!-- End Media -->
